frontend/assets/css/styles.css
body, #app {
  margin: 0;
  margin: 0;
  padding: 0;
  overflow:hidden;
}

header,
#controls,
#left-view,
#list,
#links,
#stats {
  font-family: 'Open Sans', sans-serif;
}

.tippy-popper{
  font-family: 'Open Sans', sans-serif;
}

header {
  background: lightskyblue;
  margin: 0;
  padding: 0px 10px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 50px;
  user-select: none;

  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  z-index: 5;
  font-family: 'Open Sans', sans-serif;
}

header h1 {
  margin: 0;
  font-size: x-large;
}

#header-left {
  display: flex;
  justify-content: center;
  height: 50px;
  align-items: center;
}


#header-left #status {
  text-align: left;
}

#header-right {
  display: flex;
  padding-right: 10px;
  margin-right: 10px;
  height: 50px;
  align-items: center;
}

.app-stats-item {
  margin-left: 15px;
}

#header-right input {
  width: 240px;
  height: 24px;
  font-size: 16px;
  border: none;
}


#heading {
  margin: 8px;
  margin-left: 0px;
  font-size: 24px;
  white-space: pre;
}

#header-controls {
  display: inline-block;
}

main {
  display: grid;
}

#note-controls, #section-search-input {
  padding: 0px 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 50px;
}

#section-search-input{
  background-color: lightpink;
}

#note-controls {
  background-color: blanchedalmond;
  user-select: none;
}

#note-controls-left {
  display: flex;
}

.icon-button {
  height: 50px;
  display: inline-block;
  border: none;
  cursor: pointer;
  width: 50px;
  min-width: 50px;
  padding: 0;
  background: none;
  text-align: center;
}

.icon-button img {
  vertical-align: middle;
}

button[disabled]{
  color: grey;
  fill: grey;
  cursor: inherit;
}

table {
  border-collapse: collapse;
  width: 100%;
}

.note-list-item.hub{
  font-weight: bold;
}

th, td {
  text-align: left;
  padding: 5px;
}

.note-list-item {
  cursor: pointer;
}

.note-list-item .index {
  width: 56px;
}

.note-list-item .noteListItemControls {
  height: 36px;
  text-align: right;
  padding: 0px 5px;
}

.noteListItemButton {
  height: 32px;
  cursor: pointer;
}

.note-list-item .linkedNotesIndicator {
  width: 32px;
  text-align: right;
}

.note-list-item .update-time{
  width: 92px;
}

.note-list-item:hover, .note-list-item:nth-child(even):hover {
  background-color: aqua;
}

tr:nth-child(even) {
  background-color: #f2f2f2;
}

.note-list-item[class*="active"]{
  font-weight: bold;
  background-color: chartreuse;
}

.note-list-item[class*="linked"]{
  background-color: yellow;
}

.dialog-box-button {
  font-size: 16px;
  margin-top: 5px;
  margin-right: 5px;
}


@media only screen and (min-width: 1201px) {
  main {
    grid-template-columns: auto auto;
    grid-template-rows: 100%;
    position: fixed;
    bottom: 0px;
    top: 50px;
    width: 100%;
  }

  #left-view{
    grid-area: 1 / 1 / 2 / 2;
    width: calc(100vw - 800px);
  }

  #list{
    overflow-y: scroll;
    padding: 0px;
    height: calc(100vh - 100px);
  }

  #right-view{
    grid-area: 1 / 2 / 2 / 3;
    width: 800px;
  }

  #note{
    overflow-y: auto;
    min-width: 720px;
    padding: 0;
    height: calc(100vh - 100px);
  }

  #links h2, #stats h2{
    padding: 0px 10px;
  }
}



@media only screen and (max-width: 1200px) and (min-width: 711px){
  main {
    grid-template-columns: 1fr;
  }

  #left-view{
    grid-area: 2 / 1 / 3 / 2;
  }

  #list{
    margin: auto;
    padding: 20px;
  }

  #right-view{
    grid-area: 1 / 1 / 2 / 2;
  }

  #note{
    border-bottom: 15px solid black;
    padding: 0px 10px;
  }
}


@media only screen and (max-width: 710px) {
  #app-stats{
    display: none;
  }

  main {
    grid-template-columns: 1fr;
  }

  #left-view{
    grid-area: 2 / 1 / 3 / 2;
  }

  #list{
    margin: auto;
    padding: 0px;
  }

  #right-view{
    grid-area: 1 / 1 / 2 / 2;
  }

  #note{
    border-bottom: 15px solid black;
    padding: 0;
  }

  #editor{
    grid-area: 1 / 1 / 2 / 2;
    padding: 0px 10px;
  }

  #links h2, #stats h2{
    padding: 0px 10px;
  }
}

